[package]
name = "rdkit-rs"
version = "0.1.0"
edition = "2021"
authors = ["Julius Catahalina <julius.cathalina@gmail.com>"]
description = "Rust wrappers for the RDKit C++ front-end"
license = "MIT/Apache-2.0"
repository = "https://github.com/jcathalina/rdkit-rs"
readme = "README.md"
keywords = ["rdkit", "ffi", "cheminformatics"]
categories = ["external-ffi-bindings", "chemistry", "science"]

[dependencies]
cxx = "1.0"
thiserror = "1"
rdkit-sys = { version = "0.1.0", path = "rdkit-sys", features=["dynamic-linking-from-conda"] }