[package]
name = "rdk-rs"
version = "0.1.0"
edition = "2021"
authors = ["Julius Catahalina <julius.cathalina@gmail.com>"]
description = "Rust wrappers for the RDKit C++ front-end"
license = "MIT/Apache-2.0"
repository = "https://github.com/jcathalina/rdk-rs"
readme = "README.md"
keywords = ["rdkit", "ffi", "cheminformatics"]
categories = ["external-ffi-bindings", "science"]
homepage = "https://jcathalina.github.io/"
documentation = "https://jcathalina.github.io/"

[dependencies]
cxx = "1.0"
thiserror = "1"
rdk-sys = { path = "./rdk-sys", version = "0.1.1" }
bitvec = "1"
byteorder = "1.4.3"

[workspace]
members = ["rdk-sys"]