[package]
name = "rdk-sys"
version = "0.1.1"
edition = "2021"
authors = ["Julius Catahalina <julius.cathalina@gmail.com>"]
description = "Low-level FFI Rust bindings for the RDKit C++ front-end"
license = "MIT/Apache-2.0"
repository = "https://github.com/jcathalina/rdk-rs"
keywords = ["rdkit", "ffi", "cheminformatics"]
categories = ["external-ffi-bindings", "science"]
build = "build.rs"

[dependencies]
cxx = "1.0"

[build-dependencies]
env_logger = "0.10.0"
cxx-build = "1.0"
which = "4.2.5"
